# bootcamp_how_engenharia_dados

./: .gitignore  README.md
03-ingestao-dados/: banco_de_imoveis.csv  banco_de_podcast.csv  banco_imoveis  imoveis.py  imoveis_rev.py  main.py  podcast.py
04-sql/: docker-compose.yml  main.py  sql_01.sql  sql_02.sql  sql_03.sql
04-sql/web/: index.html
05-capturando-dados-api/: .coverage  .gitignore  apis.py  ingestao.py  ingestors.py  main.py  orientacao_a_objeto.py  principios.py  requirements.txt
05-capturando-dados-api-aws/: pyproject.toml
05-capturando-dados-api-aws/mercado_bitcoin/: checkpoints.py  ingestors.py  main.py  writers.py
05-capturando-dados-api/mercado_bitcoin/: ingestors.py  writers.py
05-capturando-dados-api/tests/: test_apis.py  test_ingestors.py
06-capturando-dados-crawlers/: all_movies.py  filmes_nicolas_cage.csv  main.py  requirements.txt
07-testes-jenkins/: .gitignore  cambio.csv  docker-compose.yml  dockerfile
07-testes-jenkins/cambio/: cambio.csv  main.py
09-aws/: aws.py  requirements.txt
